[gd_scene load_steps=6 format=3 uid="uid://qumjapfpcjrg"]

[ext_resource type="Script" path="res://scripts/card_editor.gd" id="1_6tsg3"]
[ext_resource type="Script" path="res://scripts/line_edit_custom.gd" id="2_ci8ge"]
[ext_resource type="FontFile" uid="uid://ipeeek6vtceh" path="res://fonts/source/FiraCode-Bold.ttf" id="2_sjtmk"]
[ext_resource type="Script" path="res://addons/calendar_button/scripts/calendar_script.gd" id="3_0owde"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_quvx6"]
bg_color = Color(0.278431, 0.470588, 0.545098, 1)

[node name="CardEditor" type="PanelContainer" groups=["CardEditor"]]
custom_minimum_size = Vector2(448, 320)
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.125
anchor_right = 0.875
anchor_bottom = 0.875
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_quvx6")
script = ExtResource("1_6tsg3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Title" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer" groups=["CETitle"]]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Title"
alignment = 1
script = ExtResource("2_ci8ge")

[node name="CloseButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_sjtmk")
theme_override_font_sizes/font_size = 22
text = "x"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer2" type="ScrollContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Description" type="TextEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer2/VBoxContainer" groups=["CEDescription"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Description"
wrap_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer2/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
visible = false
layout_mode = 2
text = "Tags"
horizontal_alignment = 1

[node name="TagContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer" groups=["CETagContainer"]]
layout_mode = 2
mouse_filter = 2

[node name="AddTag" type="MenuButton" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer" groups=["CEAddTag"]]
layout_mode = 2
text = "Existing Tags ->"

[node name="CreateTag" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Create Tag"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DueDateContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/DueDateContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/DueDateContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/DueDateContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Due Date"
vertical_alignment = 1

[node name="CalendarButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/DueDateContainer/MarginContainer/HBoxContainer" groups=["CECalendarButton"]]
layout_mode = 2
text = "None"
script = ExtResource("3_0owde")

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dependancies"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EditDependancies" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Edit Dependancies"

[node name="DependanciesContainer" type="HFlowContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer" groups=["CEDependenciesContainer"]]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="CommentContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer" groups=["CECommentContainer"]]
layout_mode = 2
mouse_filter = 2

[node name="AddComment" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Add Comment"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChecklistContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2" groups=["CEChecklistContainer"]]
layout_mode = 2
size_flags_vertical = 3

[node name="AddChecklist" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Add Checklist"

[connection signal="focus_exited" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Title" to="." method="title_focus_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="close_pressed"]
[connection signal="focus_exited" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer2/VBoxContainer/Description" to="." method="description_focus_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/CreateTag" to="." method="create_tag_pressed"]
[connection signal="date_selected" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/DueDateContainer/MarginContainer/HBoxContainer/CalendarButton" to="." method="due_date_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer/EditDependancies" to="." method="edit_dependancies_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer/AddComment" to="." method="add_comment_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/AddChecklist" to="." method="create_checklist"]
